feat: add indicator SPI, backtest engine, and validation tooling
- feat: add indicator spi with public reference implementations
- feat: add event driven backtest engine with portfolio accounting
- feat: add monte carlo, bootstrap and jackknife validation
- feat: add optional openmp compute kernel behind the compute engine spi
- feat: add cli runner and javafx research workbench
- docs: add readme with architecture, run steps and engineering notes